--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
     <header>
         <h1>Juventus Football Club</h1>
+
+        <nav>
+            <ul>
+                <li><a href="#">stats</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section class="container">
-
-        <img src="./imgs/Juventus-header.jpg" alt="juventus logo wallpaper">
-
+    <section class="container section1">
+        <img class="header-image" src="./imgs/juventus-team.jpeg" alt="juventus team celebration">
     </section>
 
     <section class="container">
@@ -61,7 +65,7 @@
                 <td>Danilo</td>
                 <td>30</td>
                 <td>Brazilian</td>
-                <td></td>
+                <td>£13.5 million</td>
             </tr>
             <tr>
                 <td>Dušan Vlahović</td>
